--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "url": "https://firstbest.city",
-  "title": "Blurg",
-  "description": "A Beautiful Long Description",
-  "short_description": "Something",
+  "title": "First Best City",
+  "description": "A collaborative scientific approach to solving big challenges in cities",
+  "short_description": "Solving big challenges in cities",
   "theme": "light",
   "maintenance_mode": false,
   "show_house": false,
