--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
   "theme": "light",
   "maintenance_mode": false,
   "show_house": false,
-  "show_coffee": true,
+  "show_coffee": false,
   "show_ads": false
 }
